# robotics_v1

./: .gitignore  debug-miner-controller.sh  run-cleaner-controller.sh  run-cleaner-gui.sh  run-collector-controller.sh  run-collector-gui.sh  run-final-project-controller.sh  run-miner-controller.sh  run-miner-gui.sh
src/final_project_controller/final_project_controller/: CMakeLists.txt  package.xml
src/final_project_controller/final_project_controller/config/: config.txt  config_map.txt  json_config.json
src/final_project_controller/final_project_controller/include/final_project_controller/: angle_axis_provider.h  box_position.h  box_position_loader.h  command_executor.h  config_loader.h  joint_rotations.h  joint_state_subscriber.h  misc.h  script_builder.h
src/final_project_controller/final_project_controller/launch/: launch.py
src/final_project_controller/final_project_controller/resources/: box_coordinates.txt  close_gripper.urscript  generic_movel.urscript  go_to_home.urscript  go_to_safe_height.urscript  gripper_header.urscript  open_gripper.urscript
src/final_project_controller/final_project_controller/src/: angle_axis_provider.cpp  box_position.cpp  box_position_loader.cpp  command_executor.cpp  config_loader.cpp  joint_rotations.cpp  joint_state_subscriber.cpp  main.cpp  misc.cpp  script_builder.cpp
src/robo_cleaner/robo_cleaner_controller/: CMakeLists.txt  package.xml
src/robo_cleaner/robo_cleaner_controller/include/robo_cleaner_controller/: coordinate_remapper.h  direction_coordinate_calculator.h  map_graph.h  miner_navigator.h  robo_cleaner_external_bridge.h  robot_state.h  route_planner.h  shortest_path.h  shortest_path_walker.h
src/robo_cleaner/robo_cleaner_controller/launch/: launch.py
src/robo_cleaner/robo_cleaner_controller/src/: coordinate_remapper.cpp  direction_coordinate_calculator.cpp  main.cpp  map_graph.cpp  miner_navigator.cpp  robo_cleaner_external_bridge.cpp  robot_state.cpp  route_planner.cpp  shortest_path.cpp  shortest_path_walker.cpp
src/robo_collector/robo_collector_controller/config/: params.yaml
src/robo_collector/robo_collector_controller/include/robo_collector_controller/external_api/: CollectorGuiExternalBridge.h
src/robo_collector/robo_collector_controller/src/external_api/: CollectorGuiExternalBridge.cpp
src/robo_collector/robo_collector_gui/src/external_api/: CollectorControllerExternalBridge.cpp
src/robo_miner/robo_miner_common/include/robo_miner_common/defines/: RoboMinerTopics.h
src/robo_miner/robo_miner_controller/: CMakeLists.txt  package.xml
src/robo_miner/robo_miner_controller/config/: params.yaml
src/robo_miner/robo_miner_controller/include/robo_miner_controller/: coordinate_remapper.h  longest_trail.h  map_graph.h  miner_navigator.h  mover_communicator.h  param_provider.h  robo_miner_controller_external_bridge.h  robo_miner_experiment.h  shortest_path.h
src/robo_miner/robo_miner_controller/launch/: launch.py
src/robo_miner/robo_miner_controller/src/: coordinate_remapper.cpp  longest_trail.cpp  main.cpp  map_graph.cpp  miner_navigator.cpp  mover_communicator.cpp  param_provider.cpp  robo_miner_controller_external_bridge.cpp  robo_miner_experiment.cpp  shortest_path.cpp
src/robo_miner/robo_miner_gui/config/: params.yaml
src/robo_miner/robo_miner_interfaces/: CMakeLists.txt
src/robo_miner/robo_miner_interfaces/srv/: LongestSequenceCalculate.srv
src/robo_miner/robo_miner_longest_sequence/: CMakeLists.txt  package.xml
src/robo_miner/robo_miner_longest_sequence/include/robo_miner_longest_sequence/: longest_sequence.h
src/robo_miner/robo_miner_longest_sequence/src/: longest_sequence.cpp  longest_trail.cpp  main.cpp
src/ur_dev/ur_control_gui/resources/scripts/: command03.script
