<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>final_project_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zeppelincode@gmail.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_helpers</build_depend>
  <build_depend>cmake_helpers</build_depend>
  <build_depend>ur_control_gui</build_depend>
  <build_depend>urscript_interfaces</build_depend>
  <build_depend>urscript_common</build_depend>

  <exec_depend>ros2launch</exec_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cmake_helpers</exec_depend>
  <exec_depend>ur_control_gui</exec_depend>
  <exec_depend>urscript_interfaces</exec_depend>
  <exec_depend>urscript_common</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
